--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
-<!DOCTYPE html><html lang="pt-BR">
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
-<meta charset="UTF-8" />
-<title>deadk1ttyz • Criador & Editor</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" /><!-- SEO PESADO --><meta name="description" content="deadk1ttyz é um criador de conteúdo, editor e influencer conhecido no TikTok. +13K seguidores, +11M visualizações, vídeos viralizados e forte presença digital." />
-<meta name="keywords" content="deadk1ttyz, tiktok famoso, editor, influencer, criador de conteúdo, viral" />
-<meta name="author" content="deadk1ttyz" />
-<meta property="og:title" content="deadk1ttyz • Site Oficial" />
-<meta property="og:description" content="Criador de conteúdo e editor conhecido no TikTok. +11M visualizações." />
-<meta property="og:image" content="https://zyo.se/assets/images/avatars/1768459684_1000173496.jpg" /><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet" /><style>
+<meta charset="UTF-8">
+<title>deadk1ttyz • Site Oficial</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<meta name="description" content="deadk1ttyz é criador de conteúdo e editor conhecido no TikTok. +13K seguidores e +11M visualizações.">
+<meta name="author" content="deadk1ttyz">
+
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
+
+<style>
 *{margin:0;padding:0;box-sizing:border-box}
-html{scroll-behavior:smooth}
 body{
   font-family:'Inter',sans-serif;
   background:#000;
@@ -17,29 +19,7 @@ body{
   overflow-x:hidden;
 }
 
-/* BACKGROUND CINEMÁTICO */
-.bg{
-  position:fixed;
-  inset:0;
-  background:
-    radial-gradient(circle at 20% 20%,rgba(255,255,255,.06),transparent 40%),
-    radial-gradient(circle at 80% 30%,rgba(255,255,255,.04),transparent 45%),
-    radial-gradient(circle at 50% 80%,rgba(255,255,255,.03),transparent 50%);
-  animation:float 20s infinite linear;
-  z-index:-2;
-}
-@keyframes float{0%{filter:brightness(1)}50%{filter:brightness(1.2)}100%{filter:brightness(1)}}
-
-/* GRAIN */
-.noise{
-  position:fixed;
-  inset:0;
-  background:url('https://grainy-gradients.vercel.app/noise.svg');
-  opacity:.05;
-  z-index:-1;
-}
-
-/* BANNER */
+/* FUNDO */
 .banner{
   height:420px;
   background:url('https://zyo.se/assets/images/backgrounds/1768459907_1000186917.gif') center/cover no-repeat;
@@ -66,16 +46,12 @@ body{
   border-radius:50%;
   background:url('https://zyo.se/assets/images/avatars/1768459684_1000173496.jpg') center/cover no-repeat;
   border:6px solid #000;
-  box-shadow:0 0 120px rgba(255,255,255,.55);
-  animation:pulse 4s infinite ease-in-out;
+  box-shadow:0 0 120px rgba(255,255,255,.6);
 }
-@keyframes pulse{0%,100%{box-shadow:0 0 60px rgba(255,255,255,.35)}50%{box-shadow:0 0 150px rgba(255,255,255,.75)}}
-
 h1{
   margin-top:30px;
   font-size:3.6rem;
   font-weight:800;
-  letter-spacing:1.2px;
 }
 .subtitle{
   margin-top:12px;
@@ -83,7 +59,7 @@ h1{
   opacity:.85;
 }
 
-/* STATS COM CONTADOR */
+/* STATS */
 .stats{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
@@ -91,23 +67,18 @@ h1{
   margin:90px 0;
 }
 .stat{
-  background:rgba(255,255,255,.09);
+  background:rgba(255,255,255,.1);
   border-radius:30px;
   padding:38px 24px;
   backdrop-filter:blur(22px);
-  transition:.45s;
-}
-.stat:hover{
-  transform:translateY(-14px) scale(1.06);
-  background:rgba(255,255,255,.16);
 }
 .stat h2{
   font-size:2.6rem;
   font-weight:800;
 }
-.stat p{opacity:.75;margin-top:6px}
+.stat p{opacity:.75}
 
-/* REDES */
+/* LINKS */
 .links{
   display:flex;
   flex-wrap:wrap;
@@ -122,75 +93,92 @@ h1{
   color:#fff;
   text-decoration:none;
   font-weight:600;
-  backdrop-filter:blur(18px);
-  transition:.4s;
-}
-.links a:hover{
-  background:#fff;
-  color:#000;
-  transform:scale(1.12);
 }
 
-/* BOTÃO MUTE */
-#mute{
+/* BOTÃO SOM */
+#soundBtn{
   position:fixed;
   bottom:22px;
   right:22px;
   padding:14px 20px;
   border-radius:30px;
-  background:rgba(255,255,255,.12);
+  background:rgba(255,255,255,.15);
   border:1px solid rgba(255,255,255,.35);
   color:#fff;
   cursor:pointer;
-  backdrop-filter:blur(12px);
 }
-#mute:hover{background:#fff;color:#000}
+#soundBtn.active{
+  background:#fff;
+  color:#000;
+}
 
 footer{
   text-align:center;
-  opacity:.45;
+  opacity:.4;
   font-size:.85rem;
   padding:50px 0 70px;
 }
-</style></head><body>
-<div class="bg"></div>
-<div class="noise"></div><audio id="bgm" autoplay loop>
-  <source src="AhaTok_nuts_8f2ee916-3c53-49c7-aad8-e5033c727e96.mp3" type="audio/mpeg">
-</audio><button id="mute">mute</button>
+</style>
+</head>
 
-<div class="banner"></div><section class="profile">
+<body>
+
+<audio id="bgm" loop>
+  <source src="AhaTok_nuts_8f2ee916-3c53-49c7-aad8-e5033c727e96.mp3" type="audio/mpeg">
+</audio>
+
+<button id="soundBtn">🔊 Ativar som</button>
+
+<div class="banner"></div>
+
+<section class="profile">
   <div class="avatar"></div>
   <h1>deadk1ttyz</h1>
-  <p class="subtitle">Criador de conteúdo • Editor • Influencer digital</p>  <div class="stats">
+  <p class="subtitle">Criador de conteúdo • Editor • Influencer</p>
+
+  <div class="stats">
     <div class="stat"><h2 data-target="13000">0</h2><p>Seguidores</p></div>
     <div class="stat"><h2 data-target="11000000">0</h2><p>Visualizações</p></div>
     <div class="stat"><h2 data-target="800000">0</h2><p>Curtidas</p></div>
     <div class="stat"><h2 data-target="80000">0</h2><p>Compartilhamentos</p></div>
     <div class="stat"><h2 data-target="20000">0</h2><p>Comentários</p></div>
     <div class="stat"><h2 data-target="72000">0</h2><p>Views no perfil</p></div>
-  </div>  <div class="links">
+  </div>
+
+  <div class="links">
     <a href="https://www.tiktok.com/@deadk1ttyz" target="_blank">TikTok</a>
     <a href="https://www.instagram.com/deadk1ttyz" target="_blank">Instagram</a>
     <a href="https://www.roblox.com/pt/users/1897463474/profile" target="_blank">Roblox</a>
     <a href="https://open.spotify.com/user/31tefprafz2osvrbl4jzzn4a43sq" target="_blank">Spotify</a>
   </div>
-</section><footer>
-© 2026 deadk1ttyz • Site oficial
-</footer><script>
-// contador animado
-const counters=document.querySelectorAll('[data-target]');
-counters.forEach(counter=>{
+</section>
+
+<footer>© 2026 deadk1ttyz • Site oficial</footer>
+
+<script>
+// contador
+document.querySelectorAll('[data-target]').forEach(counter=>{
   const update=()=>{
     const target=+counter.dataset.target;
     const current=+counter.innerText.replace(/\D/g,'');
     const inc=target/120;
-    if(current<target){counter.innerText=Math.ceil(current+inc).toLocaleString();setTimeout(update,20)}
-    else{counter.innerText=target.toLocaleString()}
-  };update();
+    if(current<target){
+      counter.innerText=Math.ceil(current+inc).toLocaleString();
+      setTimeout(update,20);
+    } else counter.innerText=target.toLocaleString();
+  };
+  update();
 });
 
-// mute
+// som
 const audio=document.getElementById('bgm');
-document.getElementById('mute').onclick=()=>{audio.muted=!audio.muted};
-</script></body>
-  </html>
+const btn=document.getElementById('soundBtn');
+btn.onclick=()=>{
+  audio.play();
+  btn.classList.add('active');
+  btn.innerText='🔊 Som ligado';
+};
+</script>
+
+</body>
+</html>
