--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body{
 /* FUNDO */
 .banner{
   height:420px;
-  background:url('https://zyo.se/assets/images/backgrounds/1768459907_1000186917.gif') center/cover no-repeat;
+  background:url('https://pin.it/7LOY7HXxx') center/cover no-repeat;
   position:relative;
 }
 .banner::after{
@@ -44,7 +44,7 @@ body{
   height:210px;
   margin:0 auto;
   border-radius:50%;
-  background:url('https://zyo.se/assets/images/avatars/1768459684_1000173496.jpg') center/cover no-repeat;
+  background:url('https://pin.it/1VukPEY6S') center/cover no-repeat;
   border:6px solid #000;
   box-shadow:0 0 120px rgba(255,255,255,.6);
 }
@@ -124,7 +124,7 @@ footer{
 <body>
 
 <audio id="bgm" loop>
-  <source src="AhaTok_nuts_8f2ee916-3c53-49c7-aad8-e5033c727e96.mp3" type="audio/mpeg">
+  <source src="https://m.youtube.com/watch?v=yY8dxBvRwoQ&list=RDyY8dxBvRwoQ&start_radio=1&pp=ygULbnV0cyBzbG93ZWSgBwE%3D" type="audio/mpeg">
 </audio>
 
 <button id="soundBtn">🔊 Ativar som</button>
