--- a/index.html
+++ b/index.html
@@ -2,151 +2,185 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>deadk1ttyz • TESTE</title>
+<title>deadk1ttyz • Site Oficial</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
+<meta name="description" content="deadk1ttyz é criador de conteúdo e editor.">
+<meta name="author" content="deadk1ttyz">
+
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
-
 body{
-  font-family:'Montserrat',sans-serif;
-  background:#0a0000;
+  font-family:'Inter',sans-serif;
+  background:#000;
   color:#fff;
+  overflow-x:hidden;
 }
 
-/* TOPO */
-header{
-  background:linear-gradient(135deg,#ff0000,#7a0000);
-  padding:30px;
+/* BANNER */
+.banner{
+  height:420px;
+  background:url('img/banner.png') center/cover no-repeat;
+  position:relative;
+}
+.banner::after{
+  content:'';
+  position:absolute;
+  inset:0;
+  background:linear-gradient(to bottom,transparent,#000 92%);
+}
+
+/* PERFIL */
+.profile{
+  max-width:1200px;
+  margin:-150px auto 0;
+  padding:0 24px;
   text-align:center;
 }
-
-header h1{
-  font-size:3rem;
-  font-weight:900;
-  letter-spacing:2px;
-}
-
-header p{
-  opacity:.8;
-}
-
-/* HERO */
-.hero{
-  min-height:60vh;
-  background:
-    linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.9)),
-    url('img/banner.png') center/cover no-repeat;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-}
-
-/* CARD */
-.card{
-  background:#140000;
-  border:2px solid red;
-  border-radius:20px;
-  padding:40px;
-  text-align:center;
-  max-width:420px;
-  box-shadow:0 0 40px rgba(255,0,0,.6);
-}
-
 .avatar{
-  width:160px;
-  height:160px;
+  width:210px;
+  height:210px;
+  margin:0 auto;
   border-radius:50%;
-  margin:0 auto 20px;
   background:url('img/avatar.png') center/cover no-repeat;
-  border:4px solid red;
+  border:6px solid #000;
+  box-shadow:0 0 120px rgba(255,255,255,.6);
 }
-
-.card h2{
-  font-size:2rem;
-  margin-bottom:10px;
-}
-
-.card span{
-  color:#ff5a5a;
-  font-weight:700;
-}
-
-/* BOTÕES */
-.buttons{
-  display:flex;
-  flex-direction:column;
-  gap:15px;
+h1{
   margin-top:30px;
-}
-
-.buttons a{
-  padding:15px;
-  border-radius:12px;
-  background:red;
-  color:#000;
-  text-decoration:none;
+  font-size:3.6rem;
   font-weight:800;
 }
+.subtitle{
+  margin-top:12px;
+  font-family:'Playfair Display',serif;
+  opacity:.85;
+}
 
-/* SOM */
+/* STATS */
+.stats{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
+  gap:30px;
+  margin:90px 0;
+}
+.stat{
+  background:rgba(255,255,255,.1);
+  border-radius:30px;
+  padding:38px 24px;
+  backdrop-filter:blur(22px);
+}
+.stat h2{
+  font-size:2.6rem;
+  font-weight:800;
+}
+.stat p{opacity:.75}
+
+/* LINKS */
+.links{
+  display:flex;
+  flex-wrap:wrap;
+  justify-content:center;
+  gap:20px;
+  margin-bottom:100px;
+}
+.links a{
+  padding:18px 32px;
+  border-radius:50px;
+  border:1px solid rgba(255,255,255,.4);
+  color:#fff;
+  text-decoration:none;
+  font-weight:600;
+}
+
+/* BOTÃO SOM */
 #soundBtn{
   position:fixed;
-  bottom:20px;
-  right:20px;
-  padding:14px 22px;
-  border:none;
-  border-radius:40px;
-  background:red;
-  font-weight:900;
+  bottom:22px;
+  right:22px;
+  padding:14px 20px;
+  border-radius:30px;
+  background:rgba(255,255,255,.15);
+  border:1px solid rgba(255,255,255,.35);
+  color:#fff;
   cursor:pointer;
+}
+#soundBtn.active{
+  background:#fff;
+  color:#000;
 }
 
 footer{
   text-align:center;
-  opacity:.5;
-  padding:40px 0;
+  opacity:.4;
+  font-size:.85rem;
+  padding:50px 0 70px;
 }
 </style>
 </head>
 
 <body>
 
-<audio id="bgm" loop>
+<audio id="bgm" loop preload="auto">
   <source src="audio/bgm.mp3" type="audio/mpeg">
 </audio>
 
-<header>
+<button id="soundBtn" onclick="playSound()">🔊 Ativar som</button>
+
+<div class="banner"></div>
+
+<section class="profile">
+  <div class="avatar"></div>
   <h1>deadk1ttyz</h1>
-  <p>TESTE DE ATUALIZAÇÃO • SITE VERMELHO</p>
-</header>
+  <p class="subtitle">Criador de conteúdo • Editor • Influencer</p>
 
-<section class="hero">
-  <div class="card">
-    <div class="avatar"></div>
-    <h2>deadk1ttyz</h2>
-    <span>layout totalmente diferente</span>
+  <div class="stats">
+    <div class="stat"><h2 data-target="13000">0</h2><p>Seguidores</p></div>
+    <div class="stat"><h2 data-target="11000000">0</h2><p>Visualizações</p></div>
+    <div class="stat"><h2 data-target="800000">0</h2><p>Curtidas</p></div>
+    <div class="stat"><h2 data-target="80000">0</h2><p>Compartilhamentos</p></div>
+    <div class="stat"><h2 data-target="20000">0</h2><p>Comentários</p></div>
+    <div class="stat"><h2 data-target="72000">0</h2><p>Views no perfil</p></div>
+  </div>
 
-    <div class="buttons">
-      <a href="https://tiktok.com" target="_blank">TikTok</a>
-      <a href="https://instagram.com" target="_blank">Instagram</a>
-      <a href="https://roblox.com" target="_blank">Roblox</a>
-    </div>
+  <div class="links">
+    <a href="https://www.tiktok.com/@deadk1ttyz" target="_blank">TikTok</a>
+    <a href="https://www.instagram.com/deadk1ttyz" target="_blank">Instagram</a>
+    <a href="https://www.roblox.com/pt/users/1897463474/profile" target="_blank">Roblox</a>
+    <a href="https://open.spotify.com" target="_blank">Spotify</a>
   </div>
 </section>
 
-<button id="soundBtn" onclick="playSound()">▶ SOM</button>
-
-<footer>TESTE • 2026</footer>
+<footer>© 2026 deadk1ttyz • Site oficial</footer>
 
 <script>
-const audio = document.getElementById('bgm');
+// contador
+document.querySelectorAll('[data-target]').forEach(counter=>{
+  const update=()=>{
+    const target=+counter.dataset.target;
+    const current=+counter.innerText.replace(/\D/g,'');
+    const inc=target/120;
+    if(current<target){
+      counter.innerText=Math.ceil(current+inc).toLocaleString();
+      setTimeout(update,20);
+    } else {
+      counter.innerText=target.toLocaleString();
+    }
+  };
+  update();
+});
+
+// som (mobile safe)
+const audio=document.getElementById('bgm');
+const btn=document.getElementById('soundBtn');
 
 function playSound(){
-  audio.volume = 0.5;
+  audio.volume = 0.4;
   audio.play();
+  btn.classList.add('active');
+  btn.innerText='🔊 Som ligado';
 }
 </script>
 
